# Autonomous-RacingCar

./: ..gitignore.swp  .gitignore  README.md
devel/: .catkin  local_setup.sh
devel/lib/ekf_slam_pkg/: ekf_slam_node.py
devel/lib/lidar_cone_detection/: lidar_cone_centroid.py
devel/lib/pkgconfig/: AAM_CONTROL.pc  AAM_LOCALIZTION.pc  AAM_PATH_PLANNING.pc  AAM_STATE_ESTIMATION.pc  LAUNCH.pc  PLUGINS.pc  aam_common_msgs.pc  aam_common_sim.pc  aamfsd_description.pc  aamfsd_gazebo.pc  camera_cone_detection.pc  detection_msgs.pc  ekf_slam_pkg.pc  lidar_cone_detection.pc  ma_rrt_path_plan.pc  new_loc.pc  robot_control.pc  yolov5_ros.pc
devel/lib/robot_control/: robot_control_node
devel/share/AAM_CONTROL/cmake/: AAM_CONTROLConfig.cmake
devel/share/AAM_LOCALIZTION/cmake/: AAM_LOCALIZTIONConfig.cmake
src/: ma_rrt_path_plan
src/AAM_CONTROL/: package.xml
src/AAM_CONTROL/launch/: acccontrol.launch  trackcontrol.launch
src/AAM_CONTROL/src/: new_paper.py
src/AAM_LOCALIZTION/: CMakeLists.txt  package.xml
src/AAM_LOCALIZTION/launch/: localization.launch
src/AAM_LOCALIZTION/rviz/: slam.rviz
src/AAM_LOCALIZTION/src/: fastslamwithekf.py
src/AAM_PATH_PLANNING/: package.xml
src/AAM_STATE_ESTIMATION/src/: velocity_est_2_imu_accFunc_gssGroundTruth.py
src/LAUNCH/launch/: track_drive.launch
src/ekf_slam_pkg/: CMakeLists.txt
src/ekf_slam_pkg/launch/: localization.launch
src/ma_rrt_path_plan/src/: MaRRTPathPlanNode.py  cone_map_adapter.py
src/ma_rrt_path_plan2/: CMakeLists.txt
src/ma_rrt_path_plan2/src/: cone_map_adapter.py
(+26 files in other folders)
